# apigen

./: .gitignore  Cargo.toml
api-analyzer/: Cargo.toml
api-analyzer/src/: analyze.rs  error.rs  lib.rs  scope.rs  types.rs
api-analyzer/src/passes/: import.rs  mod.rs  typevalidator.rs
api-codegen/: Cargo.toml
api-codegen-rust/: Cargo.toml
api-codegen-rust/src/: code_generator.rs  lib.rs  rust_pass.rs  utils.rs.hbs
api-codegen-rust/src/template/: cargo.toml.hbs  lib.rs.hbs  method.rs.hbs  mod.rs  module.rs.hbs
api-codegen-rust/src/visitor/: endpoint_visitor.rs  enum_visitor.rs  generic_record_visitor.rs  mod.rs  module_visitor.rs  record_visitor.rs  type_visitor.rs
api-codegen-rust/src/visitors/: endpoint_visitor.rs  generic_record_visitor.rs  mod.rs  record_visitor.rs  type_visitor.rs
api-codegen/src/: code_generator.rs  error.rs  lib.rs  repository.rs  unit.rs
api-core/: Cargo.toml
api-core/src/: core.rs  error.rs  generator.rs  lib.rs  repository.rs
api-extensions/: Cargo.toml
api-extensions/src/: error.rs  lib.rs
api-parser/: Cargo.toml
api-parser/src/: error.rs  expressions.rs  lexer.rs  lib.rs  parser.pest  parser.rs
api-rust-helpers/: Cargo.toml
api-rust-helpers/src/: error.rs  lib.rs  utils.rs
api-support/: Cargo.toml
api-support/src/: auth.rs  error.rs  lib.rs  macros.rs  utils.rs
apigen/: Cargo.toml
apigen-vscode/: CHANGELOG.md  README.md  vsc-extension-quickstart.md
apigen/src/: ast_cmd.rs  common.rs  error.rs  gen_cmd.rs  list_cmd.rs  main.rs
examples/arangodb/: arangodb.api  models.api  test.api
examples/test/: blog.api  blog.rs  models.api
plugin-manager/: Cargo.toml
plugin-manager/src/: lib.rs  plugin_manager.rs
test-ouput/: cargo.toml
test-ouput/src/: arangodb.rs  lib.rs  models.rs  test.rs
