[package]
name = "api-codegen-rust"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]

[dependencies]
api-parser = { path = "../api-parser", version = "*" }
api-codegen = { path = "../api-codegen", version = "*" }
api-analyzer = { path = "../api-analyzer", version = "*" }
bytes = { version = "0.4", features = ["serde"] }
handlebars = "1.0.3"
serde = "1.0"
heck = "0.3.0"
serde_derive = "1.0"
rayon = "1.0"
#plugin-manager = { path = "../plugin-manager", version = "*" }
[lib]
crate-type = ["cdylib", "rlib"]