[package]
name = "api-core"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]

[dependencies]
api-parser = { path = "../api-parser", version = "*" }
api-analyzer = { path = "../api-analyzer", version = "*" }
api-codegen = { path = "../api-codegen", version = "*" }
api-extensions = { path = "../api-extensions", version = "*" }
error-chain = "~0.12.0"
