[package]
name = "api-extensions"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]

[dependencies]
api-analyzer = { path = "../api-analyzer", version = "*" }
api-codegen = { path = "../api-codegen", version = "*" }
plugins = { git = "https://github.com/kildevaeld/rust-plugins", branch = "master" }
error-chain = "~0.12.0"
